disk streamer code added

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,10 @@
 {
     "files.associations": {
         "paging.h": "c",
-        "disk.h": "c"
-    }
+        "disk.h": "c",
+        "streamer.h": "c",
+        "memory.h": "c",
+        "heap.h": "c"
+    },
+    "C_Cpp.errorSquiggles": "Disabled"
 }
